feat(문제 6): 제한사항 확인